--- a/src/styles.css
+++ b/src/styles.css
@@ -9,27 +9,57 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .hello {
-  color: #fde625;
-  font-size: 50px;
+  color: #00a3fe;
+  font-size: 55px;
+  background-image: linear-gradient(
+    69.9deg,
+    rgba(76, 79, 106, 1) 3.2%,
+    rgba(118, 124, 163, 1) 97.6%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .name {
-  color: #23e8ef;
-  font-size: 75px;
+  color: #2a9aff;
+  font-size: 83px;
+  background-image: linear-gradient(
+    111.8deg,
+    rgba(0, 104, 155, 1) 19.8%,
+    rgba(0, 173, 239, 1) 92.1%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .primary_skill {
-  color: #ff4246;
-  font-size: 44px;
+  color: #7193ff;
+  font-size: 26.5px;
+  background-image: linear-gradient(
+    319.6deg,
+    rgba(243, 0, 79, 1) 20.5%,
+    rgba(255, 236, 68, 1) 110.9%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .hobby {
-  color: #241e4e;
-  font-size: 23px;
+  color: #ff85ff;
+  font-size: 26px;
+  font-weight: normal;
+  background-image: linear-gradient(
+    111.8deg,
+    rgba(0, 104, 155, 1) 19.8%,
+    rgba(0, 173, 239, 1) 92.1%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
+
+/* background-image: linear-gradient( 90.6deg,  rgba(59,158,255,1) -1.2%, rgba(246,135,255,1) 91.6% ); */
